--- a/app/views/tracks/edit.html.erb
+++ b/app/views/tracks/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @track %> |
-<%= link_to 'Back', tracks_path %>
+<%= link_to 'Back',  user_tracks_path %>
