--- a/app/views/tracks/index.html.erb
+++ b/app/views/tracks/index.html.erb
@@ -15,8 +15,10 @@
     <td><%= track.shufflerId %></td>
     <td><%= track.title %></td>
     <td><%= track.order %></td>
+    
     <td><%= link_to 'Show', track %></td>
-    <td><%= link_to 'Edit', edit_track_path(track) %></td>
+    
+    <td><%= link_to 'Edit', edit_user_track_path(track) %></td>
     <td><%= link_to 'Destroy', track, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
